tests/algorithms/x/Clojure/data_structures/heap/heap.error
run: exit status 1
Syntax error (IllegalArgumentException) compiling fn* at (/workspace/mochi/tests/algorithms/x/Clojure/data_structures/heap/heap.clj:85:1).
Cannot assign to non-mutable: build_max_heap_h

Full report at:
/tmp/clojure-15100884295835798523.edn
